# WorkplaceSesssionRecorder

./: Makefile  Pipfile  README.md  design.drawio  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
database/: checkout.db
manager/: core.py  models.py
manager/crud/: checker.py  worker.py
manager/schema/: checkbook.py  worker.py
tests/: conftest.py
tests/api/: test_checkbook_table_api.py  test_worker_table_api.py
